Recover + standardize CPTS v2 notes (session work restored after history-rewrite incident)
Restored this-session standardization work from transcript replay after a
git filter-repo --force discarded uncommitted working-tree edits:
- ~20 CPTS v2 notes: tool wikilinks, current-CVE/technique additions, footers
- 34 new tool stubs + regenerated tool->note See-also backlinks (104/104)
- Notes.md / Services template reciprocal-backlink rules

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>